--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightblue;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: white;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -30,24 +30,24 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Josiah W. Kharmujai</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studyiing Biblical Studies with no current minor in 
+             </p>
          <p>
-            I am part of Gateway Baptist Church. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I am part of Palmetto Baptist Church. My favorite website is  
+            <a href="https://www.blueletterbible.org/">here</a>, and you can email me  
+            <a href="mailto:jwank793@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to Gospel music and having conversations about God.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Biblical Studies<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
+        <img src="https://seminary.bju.edu/files/2022/07/Event-BJU-Chapel-text-16x9-1.jpg" />
     </div>
 </body>
 </html>
