--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h3 {
         Biblical Studies<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://seminary.bju.edu/files/2022/07/Event-BJU-Chapel-text-9x5-1.jpg" />
+        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
     </div>
 </body>
 </html>
