--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h3 {
         <h1>Josiah W. Kharmujai</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studyiing Biblical Studies with no current minor in 
+         <p>I am a freshman at Bob Jones University studying Biblical Studies with no current minor in 
              </p>
          <p>
             I am part of Palmetto Baptist Church. My favorite website is  
